<resources>
    <string name="app_name">TestableApp</string>
    <string name="facebook_app_id">168015873577447</string>
    <string name="fb_login_protocol_scheme">fb889090927908244</string>
    <string name="name">%1$s %2$s</string>
    <string name="activity_title_login">Iniciar Sesión</string>
    <string name="action_logout">Salir</string>
    <string name="button_login">Iniciar sesión</string>
    <string name="confirmPassword">Confirmar contraseña</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_email">Email</string>
    <string name="button_register">Registrar</string>
    <string name="menu_settings">Mi cuenta</string>
    <string name="search_people">Buscar personas</string>
    <string name="guests">Invitados</string>
    <string name="continueButton">Continuar</string>
    <string name="hint_contact_picker">Buscar personas</string>
    <string name="user_full_name">%1$s %2$s</string>
    <string name="address">Dirección</string>
    <string name="description">Descripción</string>
    <string name="hint_last_name">Apellido</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_address">Dirección del evento</string>
    <string name="error_generic">Ha habido un error</string>
    <string name="error_verification_address_empty">Debes indicar la dirección del evento</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="lorem_ipsum_large">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="events">Eventos</string>
    <string name="my_events">Mis eventos</string>
    <string name="my_account">Mi cuenta</string>
    <string name="empty_my_events_title">No has creado eventos</string>
    <string name="empty_my_events_subtitle">¡Creá tu primer evento e invitá a tus amigos!</string>
    <string name="extern_action_gallery_title">Seleccionar imagen</string>
    <string name="hint_description">Descripción del evento</string>
    <string name="error_cover_message">Ups, algo salió mal, vuelve a intentarlo :)</string>
    <string name="error_verification_cover_empty">¡Necesitamos una foto que identifique tu evento!</string>
    <string name="error_verification_description_error">¡Necesitamos una descripción del evento!</string>
    <string name="error_verification_date">La fecha del evento es inválida</string>
    <string name="error_verification_guest_empty">Debes invitar al menos a una persona</string>
    <string name="button_edit_guests">Administrar invitados</string>
    <string name="button_edit_address">Cambiar dirección</string>
    <string name="register_info_explanation">Ésta información será mostrada a los usuarios de Tapp</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_cellphone">Celular (Ej: 1161884050)</string>
    <string name="register_phone_explanation">Recibirás un mensaje de texto con un código de validación.</string>
    <string name="register_phone_privacy_explanation_">No compartiremos tu número de teléfono con ningún usuario.</string>
    <string name="fragment_title_event_detail">Detalle</string>
    <string name="fragment_title_event_guests">Invitados (%1$d)</string>
    <string name="button_edit_date">Cambiar fecha</string>
    <string name="button_edit_description">Cambiar descripción</string>
    <string name="alert_title_edit_description">Editar descripción</string>
    <string name="button_stepper_back">Atrás</string>
    <string name="button_stepper_next">Siguiente</string>
    <string name="button_stepper_complete">Crear evento</string>
    <string name="error_toast_network">Error de conexión. Vuelve a intentarlo</string>
    <string name="button_create_cover">Seleccionar foto de portada</string>
    <string name="button_accept">Aceptar</string>
    <string name="activity_title_create_event">Crear evento</string>
    <string name="camel_meetings">ENCUENTROS</string>
    <string name="camel_reputation">REPUTACIÓN</string>
    <string name="camel_events">EVENTOS</string>
    <string name="cancel">Cancelar</string>
    <string name="session_close_title">Cerrar sesión</string>
    <string name="session_close_message">¿Quieres cerrar sesión?</string>
    <string name="event_detail_edit_success">¡Evento actualizado!</string>
    <string name="error_network_message">Revisa tu conexión a internet</string>
    <string name="error_network_title">Error de conexión</string>
    <string name="title_contacts">Contactos</string>
</resources>
