<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_teal"
    android:orientation="vertical">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_2m">

        <ImageView
            android:layout_width="@dimen/_15m"
            android:layout_height="@dimen/_15m"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_2m"
            android:src="@mipmap/ic_register_circle_phone" />

        <TextView
            style="@style/AppTheme.Text.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register_phone_explanation"
            android:layout_marginBottom="@dimen/_2m"
            android:textColor="@android:color/white" />

        <TextView
            style="@style/AppTheme.Text.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/register_phone_privacy_explanation_"
            android:textColor="@color/colorWhite_10" />

        <EditText
            android:id="@+id/cellphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_1m"
            android:background="@drawable/box_radio_white"
            android:hint="@string/hint_cellphone"
            android:padding="@dimen/_1m" />

    </android.support.v7.widget.LinearLayoutCompat>

</ScrollView>