<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/optionsList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    android:padding="@dimen/_1m"
    android:paddingTop="@dimen/_2m"
    android:visibility="invisible"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <!-- Edition: Description -->
    <FrameLayout
        android:id="@+id/editDescriptionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_1m"
        android:background="@drawable/box_shadowed">

        <ImageView
            android:layout_width="@dimen/_5m"
            android:layout_height="@dimen/_5m"
            android:layout_gravity="center_vertical|start"
            android:layout_margin="@dimen/_2m"
            android:src="@mipmap/ic_register_circle_settings" />

        <TextView
            style="@style/AppTheme.ListTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10m"
            android:gravity="center_vertical"
            android:padding="@dimen/_2m"
            android:text="@string/button_edit_description" />
    </FrameLayout>

    <!-- Edition: Address -->
    <FrameLayout
        android:id="@+id/editAddressButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_1m"
        android:background="@drawable/box_shadowed">

        <ImageView
            android:layout_width="@dimen/_5m"
            android:layout_height="@dimen/_5m"
            android:layout_gravity="center_vertical|start"
            android:layout_margin="@dimen/_2m"
            android:src="@mipmap/ic_register_circle_settings" />

        <TextView
            style="@style/AppTheme.ListTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10m"
            android:gravity="center_vertical"
            android:padding="@dimen/_2m"
            android:text="@string/button_edit_address" />
    </FrameLayout>

    <!-- Edition: Date -->
    <FrameLayout
        android:id="@+id/editDateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_1m"
        android:background="@drawable/box_shadowed">

        <ImageView
            android:layout_width="@dimen/_5m"
            android:layout_height="@dimen/_5m"
            android:layout_gravity="center_vertical|start"
            android:layout_margin="@dimen/_2m"
            android:src="@mipmap/ic_register_circle_settings" />

        <TextView
            style="@style/AppTheme.ListTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10m"
            android:gravity="center_vertical"
            android:padding="@dimen/_2m"
            android:text="@string/button_edit_date" />
    </FrameLayout>

    <!-- Edition: Description -->
    <FrameLayout
        android:id="@+id/editGuestsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_1m"
        android:background="@drawable/box_shadowed">

        <ImageView
            android:layout_width="@dimen/_5m"
            android:layout_height="@dimen/_5m"
            android:layout_gravity="center_vertical|start"
            android:layout_margin="@dimen/_2m"
            android:src="@mipmap/ic_register_circle_settings" />

        <TextView
            style="@style/AppTheme.ListTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10m"
            android:gravity="center_vertical"
            android:padding="@dimen/_2m"
            android:text="@string/button_edit_guests" />
    </FrameLayout>
</LinearLayout>